#202 КОНСТРУКТИВНО/ПЕРЕДЕЛАТЬ